kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore
  labels:
    app: bookstore
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: bookstore
  type: ClusterIP
